correcting detail sections on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,7 @@ h5 {
 	}
 }
 
-summary::marker {
-  display: none;
+summary::-moz-list-bullet {
+  list-style-type: none;
+   display: block;
 }
